<resources>
    <string name="app_name">GuessWho</string>
    <string name="Titulo1">Guess</string>
    <string name="Titulo2">Who?</string>
    <string name="bJugar">JUGAR</string>
    <string name="bLeaderboard">Leaderboard</string>
    <string name="bPersonajes">Personajes</string>
    <string name="bRegistro">Registro</string>
    <string name="hUsuario">Usuario</string>
    <string name="hContraseña">Contraseña</string>
    <string name="bIniciarSesion">Iniciar Sesion</string>
    <string name="bRegistroAqui">aquí.</string>
</resources>
